--- a/index.html
+++ b/index.html
@@ -266,10 +266,11 @@ xmlhttp.send("x=" + dbParam);
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-1"></div>
-						<div class="col-5">
+						<div class="col-10"></div>
+						<div class="col-1">
 							<input type="submit" value="Submit" class="btn btn-danger"/>
 						</div>
+						<div class="col-1"></div>
 					</div>
 				</div>
 				<!--
@@ -295,13 +296,13 @@ xmlhttp.send("x=" + dbParam);
 					<div class="col-12">
 						<table class="table table-bordered table-striped">
 							<tr>
-								<th>Subject</th><th>Code</th><th>Author</th><th>Title</th><th>Publisher</th><th>Edition</th><th>Year</th><th>Status</th><th>Confirmed</th><th>Confirm</th><th>Unconfirm</th><th>Edit</th>
+								<th>Subject</th><th>Code</th><th>Author</th><th>Title</th><th>Publisher</th><th>Edition</th><th>Year</th><th>Status</th><th>Confirmed</th><th>Confirm</th><th>Unconfirm</th><th>Edit</th><th>Delete</th>
 							</tr>
 							<tr>
-								<td rowspan="2"><a href="" data-toggle="modal" data-target="#myModal">ACC100 AI</a></td><td>P</td><td>Calon S et al</td><td>Accounting: Building Business Skills. PURCHASE EITHER KIMMEL OR CARLON</td><td>Wiley</td><td>3 Aus</td><td>2009</td><td></td><td>N</td><td><label><input type="checkbox" value=""></label></td><td></td><td><span class="glyphicon glyphicon-edit"></span></td>
+								<td rowspan="2"><a href="" data-toggle="modal" data-target="#myModal">ACC100 AI</a></td><td>P</td><td>Calon S et al</td><td>Accounting: Building Business Skills. PURCHASE EITHER KIMMEL OR CARLON</td><td>Wiley</td><td>3 Aus</td><td>2009</td><td></td><td>N</td><td><label><input type="checkbox" value=""></label></td><td></td><td><span class="glyphicon glyphicon-edit"></span></td><td><span class="glyphicon glyphicon-trash"></span></td>
 							</tr>
 							<tr>
-								<td>P</td><td>Kimmel, P D et al</td><td>Accounting: Building Business Skills (2nd Edition). PURCHASE EITHER KIMMEL OR CARLON</td><td>Wiley</td><td>2 Aus</td><td>2006</td><td></td><td>N</td><td><label><input type="checkbox" value=""></label></td><td></td><td><span class="glyphicon glyphicon-edit"></span></td>
+								<td>P</td><td>Kimmel, P D et al</td><td>Accounting: Building Business Skills (2nd Edition). PURCHASE EITHER KIMMEL OR CARLON</td><td>Wiley</td><td>2 Aus</td><td>2006</td><td></td><td>N</td><td><label><input type="checkbox" value=""></label></td><td></td><td><span class="glyphicon glyphicon-edit"></span></td><td><span class="glyphicon glyphicon-trash"></span></td>
 							</tr>
 						</table>
 					</div>
@@ -416,13 +417,51 @@ xmlhttp.send("x=" + dbParam);
 		</div>
         <p>
 	        <form class="form-inline">
+	        <div class="col-1"></div>
+				<div class="col-11 formrows">
+					<div class="row">
+						<div class="form-inline">
+							<div class="form-group col-12">
+								<div class="col-4">
+									<label for="textbook_type">Textbook Type</label>
+								</div>
+								<div class="col-8">
+									<input type="text" class="form-control" id="textbook_type" />
+								</div>
+							</div>
+						</div>
+					</div>
+        	<div class="row">
+				<div class="form-inline">
+						<div class="form-group col-12">
+							<div class="col-4">
+								<label for="textbook_type2">Textbook Type</label>
+							</div>
+							<div class="col-8">
+								<input type="text" class="form-control" id="textbook_type2" />
+							</div>
+						</div>
+				</div>
+			</div>
+        	<div class="row">
+				<div class="form-inline">
+						<div class="form-group col-12">
+							<div class="col-4">
+								<label for="author">Author</label>
+							</div>
+							<div class="col-8">
+								<input type="text" class="form-control" id="author" />
+							</div>
+						</div>
+				</div>
+			</div>
 	        	<div class="form-group inputmargin">
 	        		<label for="textbook_type">Textbook Type</label>
 	        		<input type="text" class="form-control" id="textbook_type" />
 	        	</div>
 	        	<div class="form-group">
-	        		<label for="author">Author</label>
-	        		<input type="text" class="form-control" id="author" />
+	        		
+	        		
 	        	</div>
 	        	<div class="form-group">
 	        		<label for="title">Title:</label>
@@ -480,9 +519,9 @@ xmlhttp.send("x=" + dbParam);
         	</div>
         </form>
 		</p>
-     	<p>Textbook notice to students (textbook information is displayed on the web for students to see)</p>
+     	<!--<p>Textbook notice to students (textbook information is displayed on the web for students to see)</p>
      	<p>Please refer to your course details to determine if purchase of text is required.</p>
-     	<p><strong>Mandatory fields are market with an asterisk*</strong></p>
+     	<p><strong>Mandatory fields are market with an asterisk*</strong></p>-->
       	<div class="form-inline">
 		<input type="submit" value="Submit" class="btn" /> <input type="reset" value="Reset" class="btn"/>
 	</div>
