I have updated the comments in the table...

--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@ xmlhttp.send("x=" + dbParam);
 							<tr>
 								<td>P</td><td>Kimmel, P D et al</td><td>Accounting: Building Business Skills (2nd Edition). PURCHASE EITHER KIMMEL OR CARLON</td><td>Wiley</td><td>2 Aus</td><td>2006</td><td></td><td>N</td><td><label><input type="checkbox" value=""></label></td><td></td><td><span class="glyphicon glyphicon-edit"></span></td><td><span class="glyphicon glyphicon-trash"></span></td>
 							</tr>
+							<tr>
+								<td colspan="13" style="text-align: left;">Comments:<br></td>
+							</tr>
 						</table>
 					</div>
 
